# eddl

./: CMakeLists.txt
cmake/: eddlConfig.cmake.in
examples/nn/: CMakeLists.txt
examples/nn/1_mnist/: 2_mnist_mlp_initializers.cpp  3_mnist_mlp_regularizers.cpp  4_mnist_mlp_da.cpp  5_mnist_mlp_train_batch.cpp  6_mnist_auto_encoder.cpp  7_mnist_conv.cpp
examples/nn/2_cifar10/: 1_cifar_conv.cpp  2_cifar_conv_da.cpp  3_cifar_vgg16.cpp  4_cifar_vgg16_bn.cpp  4_cifar_vgg16_gn.cpp  5_cifar_resnet.cpp  6_cifar_resnet_da_bn.cpp  7_cifar_resnet50_da_bn.cpp
examples/nn/3_drive/: 1_drive_seg.cpp
examples/onnx/: 1_onnx_pointer.cpp  2_onnx_save_net_to_file.cpp  3_onnx_import_net_from_file.cpp  CMakeLists.txt  tests_export.cpp
examples/tensor/: CMakeLists.txt  eddl_image.cpp  eddl_io.cpp  eddl_ops.cpp  eddl_tests_dev.cpp
